[package]
name = "lisp"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
im = "15.1"
string-interner = "0.14"
ordered-float = "3.0"
nom = "7.1"
by_address = "1.1"
phf = { version = "0.11", features = ["macros"] }
parking_lot = "0.12"
futures = { version = "0.3", optional = true }
async-std = { version = "1.12", optional = true }
rustyline = { version = "11.0", optional = true }

[features]
default = ["io-stdlib", "rustyline"]
# Enable functions in the Lisp standard library which require I/O
io-stdlib = []

[[bin]]
name = "lisp-repl"
required-features = ["rustyline"]
path = "src/main.rs"
