[package]
name = "lisp"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
description = "An attempt at a LISP interpreter"
license = "MIT"
readme = "README.md"
authors = ["Ben Kelley"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
im = "15.1"
ordered-float = "3.0"
nom = "7.1"
by_address = "1.1"
phf = { version = "0.11", features = ["macros"] }
parking_lot = "0.12"
itertools = "0.10"
rustyline = { version = "11.0", optional = true }
dashmap = "5.5"
derivative = "2.2"

[features]
default = ["io-stdlib", "rustyline"]
# Enable functions in the Lisp standard library which require I/O
io-stdlib = []
# Enable a more minimal core that allows the rest of the standard library to be
# built from it. When enabled, the test suite uses this instead of the native
# stdlib (to make sure it works as well). Disabled by default, since the in-
# language implementations are slower and unlikely to be used and so would only
# take up space with strings if unused.
self-implemented = []

[[bin]]
name = "lisp-repl"
required-features = ["rustyline"]
path = "src/main.rs"
